--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  background: black;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: whitesmoke;
+  overflow-y: hidden;
 }
 
-.App-link {
-  color: #61dafb;
+.dateDisplay{
+  color: #ff47b4;
+  font-size: 16.5px;
+  line-height: 2px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.formLableStyle{
+  color: #ff47b4;
+  font-size: 21px;
+}
+
+.formStyle{
+  margin: 40px;
+}
+
+.cardLableStyle{
+  font-size: 18px;
+}
+
+.cardGradient{
+  background: linear-gradient(to right, #f80759, #bc4e9c);
+  color:white;
 }
